# vigilops

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  COMPANY.md  CONTRIBUTING.md  DESIGN.md  LICENSE  OPERATIONS.md  README.md  README.zh-CN.md  consensus.md  docker-compose.demo.yml  docker-compose.prod.yml  docker-compose.ssl.yml  docker-compose.yml  feature_list.json  init.sh  install.sh  progress.md  quickstart.sh  run_migration.py  tmpclaude-29d1-cwd
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
agent/: agent.example.yaml  install-agent-centos7.sh  pyproject.toml
agent/nightmend_agent/: __init__.py  checker.py  cli.py  config.py  db_collector.py  discovery.py  log_collector.py  reporter.py
agent/nightmend_agent/db_collectors/: __init__.py  base.py  mysql.py  oracle.py  postgres.py  redis.py
agent/nightmend_agent/service/: windows.py
agent/scripts/: install-windows-agent.ps1  install-windows-service.ps1
agent/tests/test_db_collectors/: test_base.py  test_mysql.py  test_oracle.py  test_postgres.py  test_redis.py  test_schema.py
agent/vigilops_agent/: __init__.py  checker.py  cli.py  collector.py  config.py  db_collector.py  discovery.py  log_collector.py  reporter.py
backend/: .coverage  .dockerignore  .env.example  Dockerfile  requirements.txt
clickhouse-config/: nightmend.xml
deploy/: deploy-guide.md  docker-compose.prod.yml  docker-compose.quickstart.yml  mcp-config.json  nightmend-deploy.sh  vigilops-deploy.sh
docs/: HTTPS.md  MCP_INTEGRATION.md  POST_COMPLETION_ROADMAP.md  VigilOps-商业计划书-2026Q1-v2.pptx  VigilOps-商业计划书-2026Q1.pptx  faq.md  (+19 more)
(+410 files in other folders)
